fix(dedicated): fix iplist horizontal scroll (#12828)
ref: MANAGER-13467

--- a/packages/manager/apps/dedicated/client/app/ip/components/list/list.styles.scss
+++ b/packages/manager/apps/dedicated/client/app/ip/components/list/list.styles.scss
@@ -4,4 +4,7 @@
       display: none;
     }
   }
+  .table-list {
+    overflow-x: auto;
+  }
 }
